--- a/Pacific Trails Resort CH.4/activities.html
+++ b/Pacific Trails Resort CH.4/activities.html
@@ -18,6 +18,7 @@
 </nav>
 <div id = trailhero>
 </div>	
+<main>
 <h2> Activities at Pacific Trails </h2>
 <h3> Hiking </h3>
 <p>
@@ -34,6 +35,7 @@ While anytime is a good time for bird watching at Pacific Trails, we offer guide
 bird watching trips ay sunrise several times a week.
 </p>
 <br><br>
+</main>
 <footer>
 	 Copyright&copy 2016 Pacific Trails Resort<br>
 	<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
