--- a/Pacific Trails Resort CH.4/index.html
+++ b/Pacific Trails Resort CH.4/index.html
@@ -9,14 +9,17 @@
 <h1> Pacific Trails Resort </h1>
 <nav>
 <div id = "nav">
-	<a href= "index.html"> Home </a>
-	&nbsp <a href= "yurts.html">Yurts </a>
-	&nbsp <a href= "activities.html"> Activities </a>
-	&nbsp <a href= "reservations.html"> Reservations </a>
+<ul>
+	<li><a href= "index.html"> Home </a></li>
+	<li><a href= "yurts.html">Yurts </a></li>
+	<li><a href= "activities.html"> Activities </a></li>
+	<li><a href= "reservations.html"> Reservations </a></li>
+	</ul>
 	</div>
 	</nav>
 <div id = "homehero">
 </div>	
+<main>	
 <h2>Enjoy Nature in Luxury</h2>
 	<p> 
 		<span class="resort">Pacific Trails Resorts</span> offers a special lodging experience on the<br>
@@ -38,6 +41,7 @@
 	</p>
 	</div>
 	<br><br>
+	</main>
 	<footer>
 		 Copyright&copy 2016 Pacific Trails Resort<br>
 		<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
