--- a/Pacific Trails Resort CH.4/yurts.html
+++ b/Pacific Trails Resort CH.4/yurts.html
@@ -10,14 +10,17 @@
 <h1> Pacific Trails Resort </h1>
 <nav>
 	<div id = "nav">
-	<a href= "index.html"> Home</a>
-	&nbsp <a href= "yurts.html"> Yurts</a>
-	&nbsp <a href= "activities.html"> Activities</a>
-	&nbsp <a href= "reservations.html"> Reservations</a>
+	<ul>
+	<li><a href= "index.html"> Home</a></li>
+	<li><a href= "yurts.html"> Yurts</a></li>
+	<li><a href= "activities.html"> Activities</a></li>
+	<li><a href= "reservations.html"> Reservations</a></li>
+	</ul>
 	</div>
 </nav>
 <div id = yurthero>
-</div>	
+</div>
+<main>	
 <h2> The Yurts at Pacific Trails </h2>
 <dt><strong>What is a yurt?</strong></dt> 
 	<dd>Our luxury yurts are permanent structures four feet off the ground.<br>
@@ -30,6 +33,7 @@
 	<dd>Bring a sense of adventure and some time to relax! Most guests also pack comfortable <br>
 		walking shoes and plan to dress for changing weather with layers of clothing.</dd>
 <br><br>
+</main>
 <footer>
 	 Copyright&copy 2016 Pacific Trails Resort<br>
 	<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
