--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<ul>
 		<li><a href="http://deprospo.site90.com/Chapter%204%20test/moviecss1.html"> Movie CSS Example 1</a></li>
 		<li><a href="http://deprospo.site90.com/Chapter%204%20test/moviecss2.html"> Movie CSS Example 2</a></li>
-		<li><a href="http://deprospo.site90.com/Pacific%20Trails%20Resort%20CH.4/index.html"> Pacific Trail Resorts Case Study: <b>Introducing Chapter 6 content!!</b></a></li>
+		<li><a href="TonyD42.github.io/Pacific Trails Resort CH.4/index.html"> Pacific Trail Resorts Case Study: <b>Introducing Chapter 6 content!!</b></a></li>
 		</ul>
 		
 	<br><br>
