--- a/Pacific Trails Resort CH.4/activities.html
+++ b/Pacific Trails Resort CH.4/activities.html
@@ -10,10 +10,12 @@
 <h1> Pacific Trails Resort </h1>
 <nav>
 	<div id = "nav">
-	<a href= "index.html"> Home</a>
-	&nbsp <a href= "yurts.html"> Yurts</a>
-	&nbsp <a href= "activities.html"> Activities</a>
-	&nbsp <a href= "reservations.html"> Reservations</a>
+	<ul>
+	<li><a href= "index.html"> Home</a></li>
+	<li><a href= "yurts.html"> Yurts</a></li>
+	<li><a href= "activities.html"> Activities</a></li>
+	<li><a href= "reservations.html"> Reservations</a></li>
+	</ul>
 	</div>
 </nav>
 <div id = trailhero>
