--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h2><b>Assignments</b></h2>
 <h3> Chapter 4</h3>
 	<ul>
-		<li><a href="http://deprospo.site90.com/Chapter%204%20test/moviecss1.html"> Movie CSS Example 1</a></li>
-		<li><a href="http://deprospo.site90.com/Chapter%204%20test/moviecss2.html"> Movie CSS Example 2</a></li>
+		<li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
+		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
 		<li><a href="Pacific Trails Resort CH.4/index.html"> Pacific Trail Resorts Case Study: <b>Introducing Chapter 6 content!!</b></a></li>
 		</ul>
 		
