Update for Pacific

--- a/Pacific Trails Resort CH.4/activities.html
+++ b/Pacific Trails Resort CH.4/activities.html
@@ -41,7 +41,7 @@ bird watching trips ay sunrise several times a week.
 <footer>
 	 Copyright&copy 2016 Pacific Trails Resort<br>
 	<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
-<a href="http://deprospo.site90.com"> Back to Main Page</a>
+	<a href="index.html"> Back to Main Page</a>
 </footer>
 </div>
 </body>
