--- a/Pacific Trails Resort CH.4/yurts.html
+++ b/Pacific Trails Resort CH.4/yurts.html
@@ -37,7 +37,7 @@
 <footer>
 	 Copyright&copy 2016 Pacific Trails Resort<br>
 	<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
-<a href="http://deprospo.site90.com"> Back to Main Page</a>
+	<a href="index.html"> Back to Main Page</a>
 </footer>
 </div>
 </body>
