--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<ul>
 		<li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
 		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
-		<li><a href="Pacific Trails Resort CH.4/index.html"> Pacific Trail Resorts Case Study: <b>With Bonus Chapter 7 Homework</b></a></li>
+		<li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>With Bonus Chapter 7 Homework</b></a></li>
 		</ul>
 		
 	<br><br>
