--- a/Pacific Trails Resort CH.4/PacificIndex.html
+++ b/Pacific Trails Resort CH.4/PacificIndex.html
@@ -45,7 +45,7 @@
 	<footer>
 		 Copyright&copy 2016 Pacific Trails Resort<br>
 		<a href="mailto:Tony@DeProspo.com">Tony@DeProspo.com</a>
-		<a href="index.html"> Back to Main Page</a>
+		<a href="TonyD42.github.io/index.html"> Back to Main Page</a>
 	</footer>
 </div>	
 </body>
