--- a/Pacific Trails Resort CH.4/PacificIndex.html
+++ b/Pacific Trails Resort CH.4/PacificIndex.html
@@ -10,7 +10,7 @@
 <nav>
 <div id = "nav">
 <ul>
-	<li><a href= "index.html"> Home </a></li>
+	<li><a href= "PacificIndex.html"> Home </a></li>
 	<li><a href= "yurts.html">Yurts </a></li>
 	<li><a href= "activities.html"> Activities </a></li>
 	<li><a href= "reservations.html"> Reservations </a></li>
