--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <body>
 <h1> Anthony DeProspo </h1>
 	
-<h2><b>Assignments</b></h2>
-<h3> Chapter 4</h3>
+<h2><b>Homework Assignments</b></h2>
 	<ul>
 		<li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
 		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
 		<li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>With Bonus Chapter 7 Homework</b></a></li>
 		</ul>
-		
+<h2><b>Capstone Project</b></h2>		
 	<br><br>
 	
 	<footer>
