--- a/Pacific Trails Resort CH.4/PacificIndex.html
+++ b/Pacific Trails Resort CH.4/PacificIndex.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<title> Pacific Trails Resort </title>
+<title> Pacific Trails Resort </title>
 <meta charset="utf-8">
 <link rel = "stylesheet" href = "pacific.css">
+<meta name="viewport"
+content ="width=device-width, initial-scale=1.0">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk.html5.js">
+</script>
+<![endif]-->
+</head>
 <body>
 <div id = "wrapper">
 <h1> Pacific Trails Resort </h1>
@@ -37,7 +44,8 @@
 		<span class="resort">Pacific Trails Resort</span><br>
 		12010 Pacific Trails Road<br>
 		Zephyr, CA 95555<br><br>
-		888-555-5555
+		<a id="mobile" href = "tel:888-555-5555">888-555-5555</a>
+		<span id="desktop"> 888-555-5555</span>
 	</p>
 	</div>
 	<br><br>
