--- a/Pacific Trails Resort CH.4/yurts.html
+++ b/Pacific Trails Resort CH.4/yurts.html
@@ -4,6 +4,12 @@
 	<title> Pacific Trails Resort :: Yurts </title>
 <meta charset="utf-8">
 <link rel = "stylesheet" href = "pacific.css">
+<meta name="viewport"
+content ="width=device-width, initial-scale=1.0">
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk.html5.js">
+</script>
+<![endif]-->
 </head>
 <body>
 <div id = "wrapper">
