--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
 		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
 		<li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>Updated with Chapter 8 assignment</b></a></li>
-		<li><a href="chapter 7/PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
+		<li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
 		</ul>
 <h2><b>Capstone Project</b></h2>		
 	<br><br>
