--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
 		<li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>Updated with Chapter 8 assignment</b></a></li>
 		<li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
+		<li><a href="Exam 2/index.html">Exam Lab #2</a></li>
 		</ul>
 <h2><b>Capstone Project</b></h2>		
 	<br><br>
