--- a/Exam 2/sports.html
+++ b/Exam 2/sports.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="exam2print.css" media = print>
 </head>
 <body>
-<h1>Cleveland Browns: Join the Dark Side</h1>
+<h1>Cleveland Browns: Let the Hate Flow Through You</h1>
 <nav>
 
         <ul>
