--- a/Exam 2/sports.html
+++ b/Exam 2/sports.html
@@ -3,17 +3,20 @@
 <head>
     <title>Exam 2 Lab</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="exam2.css" media = "screen">
-    <link rel="stylesheet" href="exam2print.css" media = print>
+    <link rel="stylesheet" href="exam2.css" media="screen">
+    <link rel="stylesheet" href="exam2print.css" media=print>
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
 <h1>Cleveland Browns: Let the Hate Flow Through You</h1>
 <nav>
 
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sports.html">Sports</a></li>
-        </ul>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sports.html">Sports</a></li>
+    </ul>
 
 </nav>
 <main>
@@ -24,7 +27,7 @@
         <li>If you're still reading then the Cleveland Browns might just be for you!</li>
     </ul>
     <figure>
-        <img src = "stadium.jpg" alt = "Cleveland Browns Stadium" width = "300" height = "300">
+        <img src="stadium.jpg" alt="Cleveland Browns Stadium" width="300" height="300">
         <figcaption>
             Look at that stadium...that's a nice stadium.<br>
             Photo Credit: snipview.com
