--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 <head>
-<title>IT1150 Assignments</title>
-<meta charset="utf-8">
-<link rel = "stylesheet" href = "classsite.css">
-</head>	
+    <title>IT1150 Assignments</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="classsite.css">
+</head>
 <body>
 <h1> Anthony DeProspo </h1>
-	
+
 <h2><b>Homework Assignments</b></h2>
-	<ul>
-		<li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
-		<li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
-		<li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>Updated with Chapter 8 assignment</b></a></li>
-		<li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
-		<li><a href="Exam 2/index.html">Exam Lab #2</a></li>
-		</ul>
-<h2><b>Capstone Project</b></h2>		
-	<br><br>
-	
-	<footer>
-		<small>Created by Anthony DeProspo<br>
-		<a href="mailto:Tony.DeProspo@outlook.com">Contact by Email</a></small>
-	</footer>
-			
+<ul>
+    <li><a href="Chapter 4 test/moviecss1.html"> Movie CSS Example 1</a></li>
+    <li><a href="Chapter 4 test/moviecss2.html"> Movie CSS Example 2</a></li>
+    <li><a href="Pacific Trails Resort CH.4/PacificIndex.html"> Pacific Trail Resorts Case Study: <b>Updated with
+        Chapter 8 assignment</b></a></li>
+    <li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
+    <li><a href="Exam 2/index.html">Exam Lab #2</a></li>
+</ul>
+<h2><b>Capstone Project</b></h2>
+<br><br>
+
+<footer>
+    <small>Created by Anthony DeProspo<br>
+        <a href="mailto:Tony.DeProspo@outlook.com">Contact by Email</a></small>
+</footer>
+
 </body>
 </html>
