--- a/Exam 2/index.html
+++ b/Exam 2/index.html
@@ -3,22 +3,22 @@
 <head>
     <title>Exam 2 Lab</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="exam2.css" media = "screen">
-    <link rel="stylesheet" href="exam2print.css" media = "print">
-
+    <link rel="stylesheet" href="exam2.css" media="screen">
+    <link rel="stylesheet" href="exam2print.css" media="print">
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
 <h1>Cleveland: Not As Bad As You Might Think</h1>
 <nav>
-
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sports.html">Sports</a></li>
-        </ul>
-
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="sports.html">Sports</a></li>
+    </ul>
 </nav>
 <main>
-<div id = "skyline"></div>
+    <div id="skyline"></div>
 </main>
 <footer>
     <small>Created by Anthony DeProspo<br>
