--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         Chapter 8 assignment</b></a></li>
     <li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
     <li><a href="Exam 2/index.html">Exam Lab #2</a></li>
+    <li><a href="Chapter 9/index.html">Chapter 9 Homework</a></li>
 </ul>
 <h2><b>Capstone Project</b></h2>
 <br><br>
