--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
     <li><a href="Chapter 7/Ch7PacificIndex.html">Pacific Trail Resorts Chapter 7 Assignment</a></li>
     <li><a href="Exam 2/index.html">Exam Lab #2</a></li>
     <li><a href="Chapter 9/PacificIndex.html">Chapter 9 Homework</a></li>
+    <li><a href="Chapter%2010%20Pacific%20Trails/PacificIndex.html">Chapter 10 Pacific Trails Assignment</a></li>
 </ul>
+<h2><b>Hands On Practice</b></h2>
+
+<blockquote><h3>Chapter 10</h3>
+    <ul>
+        <li><a href="Chapter 10 Hands On/contact.html">Contact</a></li>
+        <li><a href="Chapter 10 Hands On/form1.html">Form 1</a></li>
+        <li><a href="Chapter 10 Hands On/form2.html">Form 2</a></li>
+        <li><a href="Chapter 10 Hands On/form3.html">Form 3</a></li>
+        <li><a href="Chapter 10 Hands On/form5.html">Form 5</a></li>
+    </ul>
+</blockquote>
 <h2><b>Capstone Project</b></h2>
 <br><br>
 
