--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="Chapter 9/PacificIndex.html">Chapter 9 Homework</a></li>
     <li><a href="Chapter%2010%20Pacific%20Trails/PacificIndex.html">Chapter 10 Pacific Trails Assignment</a></li>
     <li><a href="Chapter 11 Pacific Trails/PacificIndex.html">Chapter 11 Pacific Trails Assignment</a></li>
+    <li><a href="Chapter 12 Pacific Trails/PacificIndex.html">Chapter 12 Pacific Trails Assignment</a></li>
 </ul>
 <h2><b>Hands On Practice</b></h2>
 
