--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="Chapter%2010%20Pacific%20Trails/PacificIndex.html">Chapter 10 Pacific Trails Assignment</a></li>
     <li><a href="Chapter 11 Pacific Trails/PacificIndex.html">Chapter 11 Pacific Trails Assignment</a></li>
     <li><a href="Chapter 12 Pacific Trails/PacificIndex.html">Chapter 12 Pacific Trails Assignment</a></li>
+    <li><a href="Exam 3 Lab/CateringIndex.html">Exam 3 Lab</a></li>
 </ul>
 <h2><b>Hands On Practice</b></h2>
 
