--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </ul>
 </blockquote>
 <h2><b>Capstone Project</b></h2>
+<a href = "Capstone/index.html">Capstone Submission</a>
 <br><br>
 
 <footer>
