--- a/Capstone/te.html
+++ b/Capstone/te.html
@@ -32,6 +32,7 @@
     </nav>
     <main>
         <h2>Week 14 Injury Report</h2>
+        <h3>Tight Ends</h3>
         <table border = 2>
             <tr>
                 <td><b>Team Name</b></td>
