--- a/Capstone/te.html
+++ b/Capstone/te.html
@@ -58,7 +58,7 @@
                 <td>Charles Clay</td>
                 <td>Probable</td>
                 <td>While remaining limited in practice with a knee injury it looks like Clay is going
-                    to suit up Sunday for his matchup against the Eagles.</td>
+                    to suit up Sunday for his match-up against the Eagles.</td>
             </tr>
             <tr>
                 <td>Chicago Bears</td>
@@ -115,13 +115,13 @@
                 <td>Questionable</td>
                 <td>Miller hasn't played since he exited the game in Seattle with a rib injury two weeks ago,
                     but he hopes to take the field this week after getting in some limited practice this week.
-                Look for him to be a game time decison.</td>
+                Look for him to be a game time decision.</td>
             </tr>
             <tr>
                 <td>San Francisco 49ers</td>
                 <td>Vance McDonald</td>
                 <td>Doubtful</td>
-                <td>McDonald is still in the concussion protocal and as such is unlikely to take the field this week.</td>
+                <td>McDonald is still in the concussion protocol and as such is unlikely to take the field this week.</td>
             </tr>
         </table>
     </main>
