--- a/Capstone/te.html
+++ b/Capstone/te.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <title>Fantasy Injury News</title>
     <meta name="description"
-          content="Fantasy injury news test site for HTML Class">
+          content="Fantasy tight end injury news test site for HTML Class">
     <link rel="stylesheet" href="fnews.css">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
@@ -35,10 +35,10 @@
         <h3>Tight Ends</h3>
         <table border = 2>
             <tr>
-                <td><b>Team Name</b></td>
-                <td><b>Player Name</b></td>
-                <td><b>Injury Status</b></td>
-                <td><b>News</b></td>
+                <td class = header><b>Team Name</b></td>
+                <td class = header><b>Player Name</b></td>
+                <td class = header><b>Injury Status</b></td>
+                <td class = header><b>News</b></td>
             </tr>
             <tr>
                 <td>Atlanta Falcons</td>
