--- a/Capstone/wr.html
+++ b/Capstone/wr.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <title>Fantasy Injury News</title>
     <meta name="description"
-          content="Fantasy injury news test site for HTML Class">
+          content="Fantasy wide receiver injury news test site for HTML Class">
     <link rel="stylesheet" href="fnews.css">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,7 @@
 <body>
 <div id="wrapper">
     <header><h1>Fantasy Football News</h1></header>
+    <a name = "top"></a>
     <nav>
         <ul>
             <li><a href = "index.html">Home</a></li>
@@ -35,10 +36,10 @@
         <h3>Wide Receivers</h3>
         <table border = 2>
             <tr>
-                <td><b>Team Name</b></td>
-                <td><b>Player Name</b></td>
-                <td><b>Injury Status</b></td>
-                <td><b>News</b></td>
+                <td class = header><b>Team Name</b></td>
+                <td class = header><b>Player Name</b></td>
+                <td class = header><b>Injury Status</b></td>
+                <td class = header><b>News</b></td>
             </tr>
             <tr>
                 <td>Arizona Cardinals</td>
@@ -139,9 +140,8 @@
                 <td>Wright remains sideline with a rib injury, look for this situation to develop further as the week progresses.</td>
             </tr>
         </table>
+        <a href = "#top">Go to Top of Page</a>
     </main>
-
-
 </div>
 </body>
 </html>
